fix: Fix issue with disproportionately image resizing on small displays
- Add one more breakpoint with less than 380px for proper image resizing
- Fix image resizing on 601-780px with fixed image container

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 5px 30px 25px;
+  padding: 20px 30px 20px;
   text-align: left;
   width: 270px;
 }
@@ -288,6 +288,12 @@ nav h1 a {
 }
 
 /* ====================== Main page layout changes depends on screen width ====================== */
+@media screen and (max-width: 380px) {
+  #restaurants-list .restaurant-img {
+    min-height: 0;
+  }
+}
+
 @media screen and (max-width: 460px) {
   .container {
     justify-content: center;
@@ -325,11 +331,12 @@ nav h1 a {
   }
 
   #restaurants-list li {
-    padding: 5px 10px 15px;
+    padding: 5px 10px 5px;
   }
 
   nav > h1 {
-    width: 80%;
+    width: calc(80% - 20px);
+    margin-left: 20px;
   }
 
   #hamburger-menu {
@@ -357,7 +364,7 @@ nav h1 a {
   }
 }
 
-@media screen and (min-width: 601px) and (max-width: 757px) {
+@media screen and (min-width: 601px) and (max-width: 780px) {
   .container {
     justify-content: center;
   }
@@ -369,27 +376,28 @@ nav h1 a {
   #restaurants-list li {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     width: 100%;
     min-height: 250px;
     height: 250px;
+    padding: 10px 15px;
   }
 
   #restaurants-list .restaurant-img {
-    min-width: 50%;
-    width: 50%;
-    height: 50%;
+    min-width: 280px;
+    width: 280px;
   }
 
   #restaurants-list li div {
-    width: calc(50% - 10px);
+    width: calc(100% - 10px - 280px);
     order: -1;
     margin-right: 10px;
   }
 }
 
-@media screen and (min-width: 1500px) {
+@media screen and (min-width: 1600px) {
   body {
-    width: 1500px;
+    width: 1600px;
     margin-left: auto;
     margin-right: auto;
   }
